--- a/index.html
+++ b/index.html
@@ -305,22 +305,22 @@ saavuttaako kohde vasemmalla (f) vai oikealla (j) ensin keskilinjan. </p>
 <div class="instruction" id="trialinstruction_multi">
 <div>
 <h1>Mark the critical side</h1>
-<p>One to three horizontally moving targets are launched from the left and right edges of the play area. The targets set of at the same time
+<p>One to three horizontally moving targets are launched from the left and right edges of the play area. The targets set off at the same time
 but move at different speeds. Therefore, the fastest target will reach the midline first.</p>
 <p>Use the f and j keys to "mark" the targets on the critical side. The critical side is the side that has the fastest target.
-Keep your left index finger on the f key and right index finger
-on the j key.
+Keep your left index finger on the f key (marks the left side) and right index finger
+on the j key (marks the right side).
 <p>Your goal is to get as high a total score as possible. You're awarded points for both speed and precision. The faster you respond
-correctly, the more points you will get, but the faster you make an incorrect response, the more more points you will be penalized. Remember
+correctly, the more points you will get, but the faster you make an incorrect response, the more points you will be penalized. Remember
 that only the fastest target determines whether your answer is correct or incorrect.</p>
 
 <h1>Merkitse kriittinen puoli</h1>
 <p>Yhdestä kolmeen kohdetta lähtee liikkeelle pelialueen vasemmasta ja oikeasta reunasta. Kohteet lähtevät samaan aikaan, mutta
 liikkuvat eri nopeuksilla. Täten nopein kohde saavuttaa keskilinjan ensin.</p>
 <p>Käytä f- ja j-näppäimiä merkitsemään kriittisen puolen kohteet. Kriittinen puoli on se, jolla on nopein kohde. Pidä
-vasen etusormesi f-näppäimellä ja oikea etusormesi j-näppäimellä.</p>
+vasen etusormesi f-näppäimellä (merkitsee vasemman puolen) ja oikea etusormesi j-näppäimellä (merkitsee oikean puolen).</p>
 <p>Tavoitteenasi on saada mahdollisimman paljon pisteitä. Saat pisteitä sekä nopeudesta että tarkkuudesta. Mitä nopeammin vastaat
-oikein, sitä enemmän saat pisteitä, mutta mitä nopeammin annat väärän vastauksen, sitä vähemmän pisteitä saat. Muista että vain
+oikein, sitä enemmän saat pisteitä, mutta mitä nopeammin annat väärän vastauksen, sitä enemmän pisteitä menetät. Muista, että vain
 nopein kohde määrittää onko vastauksesi oikein vai väärin.
 </div>
 </div>
