--- a/index.html
+++ b/index.html
@@ -125,21 +125,21 @@ body > canvas {
 <div>
 <h1>Indicate the faster target</h1>
 <p>Targets are launched from the corners of the play area (top-left, top-right, bottom-left, bottom-right).
-Two targets are launched at a time. They travel at different speeds. The faster target will end up closer
-to the center of the crosshairs. They are visible only for a brief time, and disappear at the same time.
+Two targets are launched at the same time. They travel at different speeds. They are visible only for a brief time, and disappear at the same time.
+Therefore the faster of the two targets will end up closer
+to the center of the crosshairs. 
 </p>
 <p>
 Use the arrow keys (up, down, left, right) to indicate which of the two targets was the faster one
 (reached closer to the center of the crosshairs before disappearing).
 </p>
-<p>Your goal is to get as high a total score
-as possible. Correct answer gives +100 points, wrong answer gives -200 points.<p>
+<p>Your goal is to get as many points as possible. A correct answer gives +100 points, a wrong answer -200 points.<p>
 <p>Press any key to continue.</p>
 
-<h1>Valitse nopein kohde</h1>
-<p>Pelialueen kulmista (ylävasen, yläoikea, alavasen, alaoikea) lähtee kohteita kaksi kerrallaan.
-Ne liikkuvat eri nopeuksilla. Nopeampi kohde päätyy lähemmäs ristikkoa pelialueen keskellä. Kohteet näkyvät
-vain hetken aikaa ja katoavat samaan aikaan.</p>
+<h1>Valitse nopeampi kohde</h1>
+<p>Pelialueen kulmista (ylävasen, yläoikea, alavasen, alaoikea) lähtee kaksi kohdetta kerrallaan.
+Ne liikkuvat eri nopeuksilla. Kohteet näkyvät
+vain hetken aikaa ja katoavat samaan aikaan. Täten nopeampi kohde ehtii lähemmäs ristikkoa pelialueen keskellä. </p>
 <p>
 Käytä nuolinäppäimiä (ylös, alas, vasen, oikea) osoittamaan kumpi kohteista oli nopeampi (ehti lähemmäs
 keskustan ristikkoa ennen katoamista).
