--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ but move at different speeds. Therefore, the fastest target will reach the midli
 <p>Use the f and j keys to "mark" the targets on the critical side. The critical side is the side that has the fastest target.
 Keep your left index finger on the f key (marks the left side) and right index finger
 on the j key (marks the right side).
-<p>Your goal is to get as high a total score as possible. You're awarded points for both speed and precision. The faster you respond
+<p>Your goal is to get as high a total score as possible. You are awarded points for both speed and precision. The faster you respond
 correctly, the more points you will get, but the faster you make an incorrect response, the more points you will be penalized. Remember
 that only the fastest target determines whether your answer is correct or incorrect.</p>
 
@@ -628,6 +628,33 @@ get_speeds_2 = ->
 	#	right_speed = -(Math.random()*0.15 + 0.5)
 	[left_speed, right_speed]
 
+get_speeds_randloc = ->
+
+	# Randomize uniform ttcdiff 
+
+	abs_max_ttc_diff = 0.4
+
+	min_speed = 0.4
+	max_speed = 1.0
+	
+	abs_ttc_diff = Math.random()*abs_max_ttc_diff+0.05
+	
+	min_t = 1/max_speed
+	max_t = 1/min_speed
+
+	ttc_0 = Math.random() * ((max_t-abs_ttc_diff) - min_t) + min_t
+	ttc_1 = ttc_0 + abs_ttc_diff
+	
+	if Math.random() < 0.5
+		left_speed = 1/ttc_0
+		right_speed = -1/ttc_1
+	else
+		left_speed = 1/ttc_1
+		right_speed = -1/ttc_0
+
+	#	left_speed = (Math.random()*0.15 + 0.5)
+	#	right_speed = -(Math.random()*0.15 + 0.5)
+	[left_speed, right_speed]
 
 
 trial = ->
@@ -1382,23 +1409,44 @@ static_flash_forced = ->
 	
 		render()
 
-
-trial_flash_forced_random_startloc = ->
-	trialtype = 'flash_forced'
+random_startloc = ->
+	console.log "taalla"
+	trialtype = 'random_startloc'
 	answertime = 0
-	left.position.x = -1 + Math.random()*0.2
-	right.position.x = 1 - Math.random()*0.2
-	
 	left.material.color.setHex 0xffffff
 	right.material.color.setHex 0xffffff
 
-	[left_speed, right_speed] = get_speeds()
+
+	if Math.random() < 0.5
+		left.position.x = -0.8
+		right.position.x = 1
+	else
+		left.position.x = -1
+		right.position.x = 0.8
+
+	ttc_diff = Math.random() - 0.5
+
+	if Math.random() < 0.5
+		left_speed = 0.5
+		right_speed = (right.position.x) / ( left.position.x/left_speed - ttc_diff)
+		#console.log "right speed" 
+		#console.log right_speed
+
+	else
+		right_speed = -0.5
+		left_speed = (left.position.x) / ( right.position.x/right_speed + ttc_diff)
+		#console.log "left speed"
+		#console.log left_speed
+	#[left_speed, right_speed] = get_speeds_randloc()
 	
 	
 	left_ttc = Math.abs (left.position.x)/left_speed
 	right_ttc = Math.abs (right.position.x)/right_speed
 	
-	ttc_diff = right_ttc - left_ttc
+	calc_diff = right_ttc - left_ttc
+	#console.log calc_diff
+	#console.log ttc_diff
+
 	###	
 	ttc_diff = Math.random() - 0.5
 	right_delay = ttc_diff + left_ttc - right_ttc
@@ -1412,8 +1460,8 @@ trial_flash_forced_random_startloc = ->
 	###
 	
 	min_ttc = Math.min left_ttc, right_ttc
-	disappearlocation = Math.random()*0.5 + 0.2
-
+	#disappearlocation = Math.random()*0.5 + 0.2
+	disappeartime = 0.5
 	side_selected = 0
 	score = undefined
 
@@ -1428,10 +1476,7 @@ trial_flash_forced_random_startloc = ->
 		x1: right.position.x
 		ttcdiff: ttc_diff
 		minttc: min_ttc
-		disappear: disappearlocation
-
-	
-
+		disappear: disappeartime
 
 	trialdone = 0
 	
@@ -1446,7 +1491,7 @@ trial_flash_forced_random_startloc = ->
 		for event in events
 			# Don't accept keypress unless both objects are visible
 			#if Math.abs(right.position.x) > 1 or Math.abs(left.position.x) > 1
-			if not answertime
+			if (not answertime) or (mask.position.y == 0)
 				break
 			if score?
 				break
@@ -1463,7 +1508,8 @@ trial_flash_forced_random_startloc = ->
 			#score = (min_ttc - (t - t0))/min_ttc
 			score = 1
 			if side_selected == Math.sign(ttc_diff)
-				score *= -2
+				#score *= -2
+				score = 0
 				trialinfo.correct = 0
 			else if side_selected == -Math.sign(ttc_diff)
 				trialinfo.correct = 1
@@ -1475,13 +1521,15 @@ trial_flash_forced_random_startloc = ->
 			trialinfo.n_trials = n_trials
 
 		
-		if left.position.x > 0-disappearlocation || right.position.x < 0+disappearlocation 
+		#if left.position.x > 0-disappearlocation || right.position.x < 0+disappearlocation 
+		if ((t-t0) > disappeartime) and (not answertime)
 			left.position.x = -100
 			right.position.x = 100
 			left_speed = 0
 			right_speed = 0
+			
 			answertime = 1
-			document.getElementById("answerprompt").innerHTML = 'which one first at the center <br>  &#8678; press an arrow key &#8680; '
+			#document.getElementById("answerprompt").innerHTML = 'which side faster <br>  &#8678; press an arrow key &#8680; '
 			
 		else
 			left.position.x += left_speed * dt
@@ -2293,6 +2341,19 @@ start_timed_game = ->
 		document.getElementById("trialscore").innerHTML = ""
 		document.getElementById("answerprompt").innerHTML = ""
 
+start_randomloc_game = ->
+	console.log "huhuu"
+	for j in [0...3]
+			#await show_instruction "trialinstruction_multi"
+			for i in [0...100]
+				document.getElementById("trialscore").innerHTML = ""
+				document.getElementById("answerprompt").innerHTML = ""
+				await pause_rendered 0.3
+				await random_startloc()
+				#console.log "jee"
+				await new Promise (a) -> setTimeout a, 1000			
+			document.getElementById("trialscore").innerHTML = ""
+			document.getElementById("answerprompt").innerHTML = ""
 
 
 logger = (msg) ->
@@ -2337,6 +2398,7 @@ window.launch_game = ->
 		when "corners" then await start_corner_game()
 		when "timed" then await start_timed_game()
 		when "forced" then await start_forced_game()
+		when "randomloc" then await start_randomloc_game()
 		else await start_game()
 	
 	await document.exitFullscreen()
