Hide corner score display

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ body > canvas {
 
 </head>
 <body>
-<div style="position: absolute; font-size: large; color: white;">
+<div style="position: absolute; font-size: large; color: white; display: none;">
 	Total score: <span id="score"></span>
 	<br>Trial number: <span id="trial_n"</span>
 	<br>Trial score: <span id="trial_score"</span>
