--- a/index.html
+++ b/index.html
@@ -2011,15 +2011,32 @@ trial_corners_forced = ->
 	condition = cond_list[Math.floor(Math.random()*cond_list.length)]
 	console.log condition
 
+	
 	[left_speed, right_speed] = get_speeds()
-	right_speed = Math.abs(right_speed)
+
+	left_ttc = Math.abs 1/left_speed
+	right_ttc = Math.abs 1/right_speed
+	ttc_diff = right_ttc - left_ttc
+	min_ttc = Math.min left_ttc, right_ttc
+
+	MINPOS = 0.5
+	pos = rand(MINPOS, 1)
+	left_speed = pos/left_ttc
+	left_pos = pos
+	left_ttc = left_pos/left_speed
+
+	pos = rand(MINPOS, 1)
+	right_speed = pos/right_ttc
+	right_pos = pos
+	right_ttc = right_pos/right_speed
+
 
 	switch condition
 		when 12 
-			left.position.x = -1   
-			right.position.x = 1 
-			left.position.y = 1
-			right.position.y = 1
+			left.position.x = -left_pos   
+			right.position.x = right_pos 
+			left.position.y = left_pos
+			right.position.y = right_pos
 			left_speed_x = left_speed
 			right_speed_x = -right_speed
 			left_speed_y = -left_speed
@@ -2027,10 +2044,10 @@ trial_corners_forced = ->
 			left_key = ["ArrowLeft"]
 			right_key = ["ArrowRight"]
 		when 23
-			left.position.x = -1   
-			right.position.x = -1 
-			left.position.y = 1
-			right.position.y = -1
+			left.position.x = -left_pos   
+			right.position.x = -right_pos 
+			left.position.y = left_pos
+			right.position.y = -right_pos
 			left_speed_x = left_speed
 			right_speed_x = right_speed
 			left_speed_y = -left_speed
@@ -2040,10 +2057,10 @@ trial_corners_forced = ->
 
 
 		when 34
-			left.position.x = -1   
-			right.position.x = 1 
-			left.position.y = -1
-			right.position.y = -1
+			left.position.x = -left_pos   
+			right.position.x = right_pos 
+			left.position.y = -left_pos
+			right.position.y = -right_pos
 			left_speed_x = left_speed
 			right_speed_x = -right_speed
 			left_speed_y = left_speed
@@ -2053,10 +2070,10 @@ trial_corners_forced = ->
 
 
 		when 41
-			left.position.x = 1   
-			right.position.x = 1 
-			left.position.y = 1
-			right.position.y = -1
+			left.position.x = left_pos   
+			right.position.x = right_pos 
+			left.position.y = left_pos
+			right.position.y = -right_pos
 			left_speed_x = -left_speed
 			right_speed_x = -right_speed
 			left_speed_y = -left_speed
@@ -2065,10 +2082,10 @@ trial_corners_forced = ->
 			right_key = ["ArrowDown"]
 
 		when 13
-			left.position.x = -1   
-			right.position.x = 1 
-			left.position.y = -1
-			right.position.y = +1
+			left.position.x = -left_pos   
+			right.position.x = right_pos 
+			left.position.y = -left_pos
+			right.position.y = right_pos
 			left_speed_x = left_speed
 			right_speed_x = -right_speed
 			left_speed_y = left_speed
@@ -2077,10 +2094,10 @@ trial_corners_forced = ->
 			right_key = ["ArrowUp" , "ArrowRight"]
 
 		when 24
-			left.position.x = -1   
-			right.position.x = 1 
-			left.position.y = 1
-			right.position.y = -1
+			left.position.x = -left_pos   
+			right.position.x = right_pos 
+			left.position.y = left_pos
+			right.position.y = -right_pos
 			left_speed_x = left_speed
 			right_speed_x = -right_speed
 			left_speed_y = -left_speed
@@ -2099,21 +2116,8 @@ trial_corners_forced = ->
 	ttc_diff = right_ttc - left_ttc
 
 	
-	###	
-	ttc_diff = Math.random() - 0.5
-	right_delay = ttc_diff + left_ttc - right_ttc
-	
-	if right_delay > 0 
-		right.position.x += (right_delay * -right_speed)
-		right_ttc = Math.abs right.position.x / right_speed
-	else
-		left.position.x += right_delay * left_speed
-		left_ttc = Math.abs left.position.x / left_speed
-	###
-	
 	min_ttc = Math.min left_ttc, right_ttc
-	#disappearlocation = Math.random()*0.5 + 0.2
-	#disappeartime = Math.random()*0.4 + 0.4
+	
 	disappeartime = 0.5
 	side_selected = 0
 	score = undefined
@@ -2169,13 +2173,14 @@ trial_corners_forced = ->
 			#score = (min_ttc - (t - t0))/min_ttc
 			score = 1
 			if side_selected == Math.sign(ttc_diff)
-				score *= -2
+				score = 0 
 				trialinfo.correct = 0
 			else if side_selected == -Math.sign(ttc_diff)
 				trialinfo.correct = 1
 			trialinfo.reply_ttc_time = min_ttc - (t-t0)
 			trialinfo.reply_time = (t-t0)
 			trialinfo.reply_time_utc = Date.now()
+			trialinfo.side_selected = side_selected
 
 			update_score(score)
 			trialinfo.score = score
@@ -2350,9 +2355,9 @@ start_corner_game_blocked = ->
 			linewidth: 3
 	)
 	scene.add vline
-	for block in [0...7]
+	for block in [0...5]
 		await show_instruction "corners_instruction"
-		for i in [0...150]
+		for i in [0...100]
 			document.getElementById("trialscore").innerHTML = ""
 			document.getElementById("answerprompt").innerHTML = ""
 
