--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
 	font-size: x-large;
 }
 
+
+
+
 body {
 	margin: 0;
 	background-color: black;
@@ -84,6 +87,12 @@ body > canvas {
 	cursor: none;
 	display: block;
     margin: 0 auto;
+}
+
+.instimg {
+	width: 25%;
+	height 100%;
+	object-fit: contain;
 }
 
 .instruction {
@@ -104,6 +113,9 @@ body > canvas {
 	width: 50%;
 	cursor: none;
 }
+
+
+
 
 </style>
 
@@ -138,6 +150,20 @@ Tämä peli testaa ääreisnäön käyttöä ja keskittymistä.
 <p>
 Paina mitä tahansa näppäintä jatkaaksesi.
 </p>
+<p>
+</p>
+<p>
+</p>
+<h1>
+Welcome!
+</h1>
+<p>
+This game will test your peripheral vision and your ability to concentrate.
+</p>
+
+<p>
+Press any key to continue
+</p>
 
 </div>
 </div>
@@ -146,18 +172,15 @@ Paina mitä tahansa näppäintä jatkaaksesi.
 
 <div class="instruction" id="corners_instruction_2">
 <div>
-<p>
-Pelissä sinun pitää päättää kumpi kahdesta ehtisi ensimmäisenä ruudun keskipisteeseen.
-</p>
-
+<h1>
+Pelissä sinun pitää päättää kumpi kohteista ehtisi ensimmäisenä ruudun keskipisteeseen.
+</h1>
 <p>
 Pelialueen kulmien tuntumasta (ylävasen, yläoikea, alavasen, alaoikea) lähtee kaksi kohdetta kerrallaan. 
 </p>
 <p>
 Kohteet näkyvät vain hetken aikaa ja katoavat samaan aikaan. Ne liikkuvat eri nopeuksilla kohti keskipistettä.
 </p>
-
-<img src="corners_instruction_illustration.png" alt="Game illustration">
 
 <p>
 Jos kohteet jatkaisivat liikettään katoamisen jälkeen, toinen niistä osuisi keskipisteeseen ensin.
@@ -167,22 +190,103 @@ Jos kohteet jatkaisivat liikettään katoamisen jälkeen, toinen niistä osuisi 
 Käytä nuolinäppäimiä (ylös, alas, vasen, oikea) osoittamaan kumpi kohteista on "kriittinen" kohde ja osuisi keskipisteeseen ensin.
 </p>
 
- 
 <p>Paina mitä tahansa näppäintä jatkaaksesi.</p>
+</p>
+
+
+<img class = "instimg" src="corners_instruction_illustration.png"   alt="Game illustration">
+
+
+
+<h1>
+Your task is to indicate which of two moving targets would arrive first at the center.
+</h1>
+
+<p>
+Two targets at a time are launched from near the corners of the play area (top-left, top-right, bottom-left, bottom-right) towards the centre of the screen
+</p>
+
+<p>
+The targets are always launched at the same time, and are visible only for a brief time. They disappear at the same time. 
+Both travel towards the centre of the crosshairs, at different speeds. 
+</p>
+<p>
+If they were to continue the movement after the disappearance, then one of them would arrive at the center before the other. 
+</p>
+<p>
+Use the arrow keys (up, down, left, right) to select this target
+</p>
+<p>
+Press any key to continue
 </p>
 </div>
 </div>
+
 
 <div class="instruction" id="corners_instruction_3">
 <div>
+<h1>
+Pelin tarkoituksena on saada mahdollisimman paljon pisteitä
+</h1>
+<p>
+Oikeasta vastauksesta +100 pistettä, väärästä 0 pistettä.
+</p>
+<p>
+Pisteet näkyvät ruudun keskellä jokaisen kierroksen jälkeen
+</p>
+
 <p>
 Vihje: sormet kannattaa pitää koko ajan nuolinäppäinten tuntumassa! 
 </p>
-<p>Paina mitä tahansa näppäintä aloittaaksesi pelin.</p>
-
+<p>
+Ensimmäisessä harjoitusosiossa on 20 kierrosta
 </p>
+<p>Paina mitä tahansa näppäintä aloittaaksesi pelin.</p>
+</p>
+
+<h1>
+Your goal in the game is to score as many points as possible.
+</h1>
+<p>
+A correct answer gives +100 points, a wrong answer 0 points
+</p>
+
+<p>
+The points are shown in the middle of the screen after each target launch
+</p>
+
+<p>
+The first practice run will be 20 launches. 
+<p>
+
+<p>
+Press any key to start the game
+<p>
+
+
 </div>
 </div>
+
+<div class="instruction" id="corners_instruction_4">
+<div>
+<h1> Kierros / round number:  <span class="blocknumber"> </span> </h1>
+<p>
+Tällä kierroksella on <span class="num_trials"> </span> lähtöä
+<p>
+<p>
+Paina jotain näppäintä aloittaaksesi pelin
+</p>
+
+<p>
+This round will have <span class="num_trials"> </span> trials
+<p>
+<p>
+<p>Press any key to start the game.</p>
+</p>
+
+</div>
+</div>
+
 
 
 
@@ -398,6 +502,17 @@ keskikohdan ensin saavuttava kohde määrittää onko vastauksesi oikein vai vä
 <p>Press any key to continue
 </div>
 </div>
+
+<div class="instruction" id="blockscore_c">
+<div>
+<h1>Score <span id="blockpoints_c"></span> points.</h1>
+<h1>Accuracy <span id="blockaccuracy_c"> </h1>
+<h1>Round number <span id="blocknumber_c"> </span>  </h1>
+<p>Press any key to continue
+</div>
+</div>
+
+
 
 <div class="instruction" id="trialinstruction_practice">
 <div>
@@ -2472,17 +2587,52 @@ start_corner_game_blocked = ->
 			linewidth: 3
 	)
 	scene.add vline
+
+	await show_instruction "corners_instruction_1"
+	await show_instruction "corners_instruction_2"
+	await show_instruction "corners_instruction_3"
+
+	# practice 
+	num_trials = 20
+	total_score = 0
+
+	for i in [0...num_trials]
+		
+		document.getElementById("trialscore").innerHTML = ""
+		document.getElementById("answerprompt").innerHTML = ""
+
+		#await new Promise (a) -> setTimeout a, 300
+		await pause_rendered 0.3
+		await trial_corners_forced()
+		await new Promise (a) -> setTimeout a, 1000
+	block_score = total_score 
+
+	document.getElementById("blockpoints_c").innerHTML = Math.round(block_score) 
+	accuracy = block_score/(num_trials*100) * 100
+	document.getElementById("blockaccuracy_c").innerHTML = accuracy.toPrecision(3) + " %"
+	
+	document.getElementById("blocknumber_c").innerHTML = "0"
+	await show_instruction "blockscore_c"
+	document.getElementById("trialscore").innerHTML = ""
+	document.getElementById("answerprompt").innerHTML = ""
+
 	num_blocks = 10
 	num_trials = 100
+
+	total_score = 0
 	for j in [0...num_blocks]
+		
 		score_before = total_score
+
 		els = document.getElementsByClassName("blocknumber")
 		for el in els
 			el.innerHTML = j+1	
-		
-		await show_instruction "corners_instruction_1"
-		await show_instruction "corners_instruction_2"
-		await show_instruction "corners_instruction_3"
+				
+		els = document.getElementsByClassName("num_trials")
+		for el in els
+			el.innerHTML = num_trials					
+
+		await show_instruction "corners_instruction_4"
 		for i in [0...num_trials]
 			document.getElementById("trialscore").innerHTML = ""
 			document.getElementById("answerprompt").innerHTML = ""
@@ -2493,11 +2643,15 @@ start_corner_game_blocked = ->
 			await new Promise (a) -> setTimeout a, 1000
 
 		block_score = total_score - score_before
-		document.getElementById("blockpoints").innerHTML = Math.round(block_score)
-		document.getElementById("blocknumber").innerHTML = j+1 + "/" + num_blocks
-		await show_instruction "blockscore"
+		document.getElementById("blockpoints_c").innerHTML = Math.round(block_score) 
+		accuracy = block_score/(num_trials*100) * 100
+		document.getElementById("blockaccuracy_c").innerHTML = accuracy.toPrecision(3) + " %"
+
+		document.getElementById("blocknumber_c").innerHTML = j+1 + " / "  +num_blocks
+		await show_instruction "blockscore_c"
 		document.getElementById("trialscore").innerHTML = ""
 		document.getElementById("answerprompt").innerHTML = ""
+
 
 start_timed_game = ->
 	for j in [0...10]
